ecmascript/parser/tests/test262-error-references/fail/58707e130fe451a8.js.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/test262-parser/fail/58707e130fe451a8.js:1:13
  |
1 | void { [1, 2]: 3 };
  |             ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/test262-parser/fail/58707e130fe451a8.js:1:1
  |
1 | void { [1, 2]: 3 };
  | ^^^^^^^^^^^^

error: Expected ], got ,
 --> $DIR/tests/test262-parser/fail/58707e130fe451a8.js:1:10
  |
1 | void { [1, 2]: 3 };
  |          ^

